@@ -71,3 +71,5 @@ feat: add CopyButton component and integration code preview
 ### feat: Create Dashboard main page with app list
 
 ### feat: Add Settings page for user configurations
+
+### fix: Update pricing in plans and correct price type in PricingCard component
